--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <title>tourist</title>
+    <title>【去哪儿网】景点门票栏目</title>
   </head>
   <body>
     <div id="app"></div>
